Dependencies/MELibraries/32/BC/MEGSV.H

int WINAPI GSVsetUnipolar(int no);
int WINAPI MEsetCal(int no, double cal);
double WINAPI MEgetCal(int no);
int WINAPI MEsendID(int no, char *id);
double WINAPI GSVDispGetNorm(int no);
int WINAPI GSVDispGetUnit(int no);
int WINAPI GSVDispGetDPoint(int no);
int WINAPI GSVswitch(int no, int on);
int WINAPI MEwriteSerialNo(int no, char *number);
int WINAPI GSVsetThreshold(int no, double thon, double thoff);
int WINAPI GSVgetThreshold(int no, double *thon, double *thoff);
int WINAPI GSVsetChannel(int no, int channel);
int WINAPI GSVstopTransmit(int no);
int WINAPI GSVstartTransmit(int no);
int WINAPI GSVclearBuffer(int no);
int WINAPI GSVsetMode(int no, int mode);
int WINAPI GSVgetMode(int no);
int WINAPI MEwriteEquipment(int no, int equip);
int WINAPI GSVgetEquipment(int no);
long WINAPI GSVfirmwareVersion(int no);
int WINAPI GSVsetGageFactor(int no, double gf);
double WINAPI GSVgetGageFactor(int no);
int WINAPI GSVsetPoisson(int no, double poiss);
double WINAPI GSVgetPoisson(int no);
int WINAPI GSVsetBridge(int no, int br);
int WINAPI GSVgetBridge(int no);
int WINAPI MEwriteRange(int no, double range);
double WINAPI GSVgetRange(int no);
int WINAPI MEsetOffsetWait(int no, double ow);
double WINAPI MEgetOffsetWait(int no);
long WINAPI GSVgetOptions(int no);
int WINAPI MEwriteOptions(int no, long options);
int WINAPI GSVreadMemory(int no, int addr, void *buffer, int *status);
int WINAPI GSVwriteMemory(int no, int addr, int check, int value, int *status);
double WINAPI GSVgetMemoryWait(int no);
int WINAPI GSVgetValue(int no);
int WINAPI GSVclearMaxValue(int no);
int WINAPI GSVDispSetDigits(int no, int digits);
int WINAPI GSVDispGetDigits(int no);
int WINAPI GSVunlockUII(int no);
int WINAPI GSVlockUII(int no);
int WINAPI GSVgetLastError(int no);
int WINAPI GSVsetSecondThreshold(int no, double thon, double thoff);
int WINAPI GSVgetSecondThreshold(int no, double *thon, double *thoff);
int WINAPI GSVgetDeviceType(int no);
int WINAPI GSVDispCalcNorm(int no);
int WINAPI GSVsetTxMode(int no, int txmode);
int WINAPI GSVgetTxMode(int no);
int WINAPI GSVsetBaud(int no, int baud);
int WINAPI GSVgetBaud(int no);
int WINAPI GSVsetSlowRate(int no, long secs);
long WINAPI GSVgetSlowRate(int no);
int WINAPI GSVsetSpecialMode(int no, int smode);
int WINAPI GSVgetSpecialMode(int no);
int WINAPI GSVwriteSamplingRate(int no, double freq, int factor);
int WINAPI GSVreadSamplingRate(int no, double *freq, int *factor);
int WINAPI GSVsetCanSetting(int no, int stype, int val);
int WINAPI GSVgetCanSetting(int no, int stype);
int WINAPI GSVsetAnalogFilter(int no, double freq);
double WINAPI GSVgetAnalogFilter(int no);
int WINAPI GSVisCommandAvailable(int no, int cmd1, int cmd2);
int WINAPI GSVsetNoiseCutThreshold(int no, double thr);
double WINAPI GSVgetNoiseCutThreshold(int no);
int WINAPI GSVsetAutoZeroCounter(int no, long ctr);
long WINAPI GSVgetAutoZeroCounter(int no);
int WINAPI GSVsetUserTextChar(int no, int addr, unsigned char c);
int WINAPI GSVgetRanges(int no, int channel, int inx, double *prange);
	   
int WINAPI GSVsetRanges(int no, int channel, int inx, double range);
int WINAPI GSVgetTxModeConfig(int no);
int WINAPI GSVsetTxModeTransmit4(int no, int t4);
int WINAPI GSVgetTxModeTransmit4(int no);
int WINAPI GSVsetTxModeRepeat3(int no, int r3);
int WINAPI GSVgetTxModeRepeat3(int no);
int WINAPI GSVsetTxModeTransmit5(int no, int t5);
int WINAPI GSVgetTxModeTransmit5(int no);
int WINAPI GSVsetTxModeReadOnly(int no, int ro);
int WINAPI GSVgetTxModeReadOnly(int no);
int WINAPI GSVsetSpecialModeSlow(int no, int slow);
int WINAPI GSVgetSpecialModeSlow(int no);
int WINAPI GSVsetSpecialModeAverage(int no, int avg);
int WINAPI GSVgetSpecialModeAverage(int no);
int WINAPI GSVsetSpecialModeFilter(int no, int flt);
int WINAPI GSVgetSpecialModeFilter(int no);
int WINAPI GSVsetSpecialModeMax(int no, int mx);
int WINAPI GSVgetSpecialModeMax(int no);
int WINAPI GSVsetSpecialModeFilterAuto(int no, int fltauto);
int WINAPI GSVgetSpecialModeFilterAuto(int no);
int WINAPI GSVsetSpecialModeFilterOrder5(int no, int fltord2);
int WINAPI GSVgetSpecialModeFilterOrder5(int no);
int WINAPI GSVsetSpecialModeSleep(int no, int sleep);
int WINAPI GSVgetSpecialModeSleep(int no);
int WINAPI GSVsetSpecialModeAutoZero(int no, int autozero);
int WINAPI GSVgetSpecialModeAutoZero(int no);
int WINAPI GSVsetSpecialModeNoiseCut(int no, int noisecut);
int WINAPI GSVgetSpecialModeNoiseCut(int no);
double WINAPI GSVreadSamplingFrequency(int no);
int WINAPI GSVreadSamplingFactor(int no);
int WINAPI GSVsetBaudRate(int no, long baudrate);
long WINAPI GSVgetBaudRate(int no);
int WINAPI GSVsetCanBaudRate(int no, long baudrate);
long WINAPI GSVgetCanBaudRate(int no);
int WINAPI GSVisSamplingFrequencyProtocolLinear(int no);
int WINAPI GSVisSamplingFactorProtocolLinear(int no);
int WINAPI GSVsetCanID(int no, int idtype, long id);
long WINAPI GSVgetCanID(int no, int idtype);
int WINAPI GSVsetCanBaud(int no, int baud);
int WINAPI GSVgetCanBaud(int no);
int WINAPI GSVisCanAvailable(int no);
int WINAPI GSVsetCanActive(int no, int active);