Dependencies/MELibraries/32/VB/MEGSV.BAS

Public Declare Function GSVsetUnipolar Lib "MEGSV" Alias "#121" (ByVal no As Long) As Long
Public Declare Function MEsetCal Lib "MEGSV" Alias "#123" (ByVal no As Long, ByVal cal As Double) As Long
Public Declare Function MEgetCal Lib "MEGSV" Alias "#124" (ByVal no As Long) As Double
Public Declare Function MEsendID Lib "MEGSV" Alias "#125" (ByVal no As Long, ByVal id As String) As Long
Public Declare Function GSVDispGetNorm Lib "MEGSV" Alias "#126" (ByVal no As Long) As Double
Public Declare Function GSVDispGetUnit Lib "MEGSV" Alias "#127" (ByVal no As Long) As Long
Public Declare Function GSVDispGetDPoint Lib "MEGSV" Alias "#128" (ByVal no As Long) As Long
Public Declare Function GSVswitch Lib "MEGSV" Alias "#129" (ByVal no As Long, ByVal swon As Long) As Long
Public Declare Function MEwriteSerialNo Lib "MEGSV" Alias "#130" (ByVal no As Long, ByVal number As String) As Long
Private Declare Function MEreadSerialNo Lib "MEGSV" Alias "#131" (ByVal no As Long, ByVal number As String) As Long
Public Declare Function GSVsetThreshold Lib "MEGSV" Alias "#132" (ByVal no As Long, ByVal thon As Double, ByVal thoff As Double) As Long
Public Declare Function GSVgetThreshold Lib "MEGSV" Alias "#133" (ByVal no As Long, ByRef thon As Double, ByRef thoff As Double) As Long
Public Declare Function GSVsetChannel Lib "MEGSV" Alias "#134" (ByVal no As Long, ByVal channel As Long) As Long
Public Declare Function GSVstopTransmit Lib "MEGSV" Alias "#135" (ByVal no As Long) As Long
Public Declare Function GSVstartTransmit Lib "MEGSV" Alias "#136" (ByVal no As Long) As Long
Public Declare Function GSVclearBuffer Lib "MEGSV" Alias "#137" (ByVal no As Long) As Long
Public Declare Function GSVsetMode Lib "MEGSV" Alias "#138" (ByVal no As Long, ByVal mode As Long) As Long
Public Declare Function GSVgetMode Lib "MEGSV" Alias "#139" (ByVal no As Long) As Long
Public Declare Function MEwriteEquipment Lib "MEGSV" Alias "#140" (ByVal no As Long, ByVal equip As Long) As Long
Public Declare Function GSVgetEquipment Lib "MEGSV" Alias "#141" (ByVal no As Long) As Long
Public Declare Function GSVfirmwareVersion Lib "MEGSV" Alias "#143" (ByVal no As Long) As Long
Public Declare Function GSVsetGageFactor Lib "MEGSV" Alias "#144" (ByVal no As Long, ByVal gf As Double) As Long
Public Declare Function GSVgetGageFactor Lib "MEGSV" Alias "#145" (ByVal no As Long) As Double
Public Declare Function GSVsetPoisson Lib "MEGSV" Alias "#146" (ByVal no As Long, ByVal poiss As Double) As Long
Public Declare Function GSVgetPoisson Lib "MEGSV" Alias "#147" (ByVal no As Long) As Double
Public Declare Function GSVsetBridge Lib "MEGSV" Alias "#148" (ByVal no As Long, ByVal br As Long) As Long
Public Declare Function GSVgetBridge Lib "MEGSV" Alias "#149" (ByVal no As Long) As Long
Public Declare Function MEwriteRange Lib "MEGSV" Alias "#150" (ByVal no As Long, ByVal range As Double) As Long
Public Declare Function GSVgetRange Lib "MEGSV" Alias "#151" (ByVal no As Long) As Double
Public Declare Function MEsetOffsetWait Lib "MEGSV" Alias "#152" (ByVal no As Long, ByVal ow As Double) As Long
Public Declare Function MEgetOffsetWait Lib "MEGSV" Alias "#153" (ByVal no As Long) As Double
Public Declare Function GSVgetOptions Lib "MEGSV" Alias "#154" (ByVal no As Long) As Long
Public Declare Function MEwriteOptions Lib "MEGSV" Alias "#155" (ByVal no As Long, ByVal options As Long) As Long
Public Declare Function GSVreadMemory Lib "MEGSV" Alias "#156" (ByVal no As Long, ByVal addr As Long, ByRef buffer As Any, ByRef status As Long) As Long
Public Declare Function GSVwriteMemory Lib "MEGSV" Alias "#157" (ByVal no As Long, ByVal addr As Long, ByVal check As Long, ByVal value As Long, ByRef status As Long) As Long
Public Declare Function GSVgetMemoryWait Lib "MEGSV" Alias "#158" (ByVal no As Long) As Double
Public Declare Function GSVgetValue Lib "MEGSV" Alias "#159" (ByVal no As Long) As Long
Public Declare Function GSVclearMaxValue Lib "MEGSV" Alias "#160" (ByVal no As Long) As Long
Public Declare Function GSVDispSetDigits Lib "MEGSV" Alias "#161" (ByVal no As Long, ByVal digits As Long) As Long
Public Declare Function GSVDispGetDigits Lib "MEGSV" Alias "#162" (ByVal no As Long) As Long
Public Declare Function GSVunlockUII Lib "MEGSV" Alias "#163" (ByVal no As Long) As Long
Public Declare Function GSVlockUII Lib "MEGSV" Alias "#164" (ByVal no As Long) As Long
Public Declare Function GSVgetLastError Lib "MEGSV" Alias "#166" (ByVal no As Long) As Long
Public Declare Function GSVsetSecondThreshold Lib "MEGSV" Alias "#167" (ByVal no As Long, ByVal thon As Double, ByVal thoff As Double) As Long
Public Declare Function GSVgetSecondThreshold Lib "MEGSV" Alias "#168" (ByVal no As Long, ByRef thon As Double, ByRef thoff As Double) As Long
Public Declare Function GSVgetDeviceType Lib "MEGSV" Alias "#169" (ByVal no As Long) As Long
Public Declare Function GSVDispCalcNorm Lib "MEGSV" Alias "#170" (ByVal no As Long) As Long
Public Declare Function GSVsetTxMode Lib "MEGSV" Alias "#228" (ByVal no As Long, ByVal txmode As Long) As Long
Public Declare Function GSVgetTxMode Lib "MEGSV" Alias "#229" (ByVal no As Long) As Long
Public Declare Function GSVsetBaud Lib "MEGSV" Alias "#230" (ByVal no As Long, ByVal baud As Long) As Long
Public Declare Function GSVgetBaud Lib "MEGSV" Alias "#231" (ByVal no As Long) As Long
Public Declare Function GSVsetSlowRate Lib "MEGSV" Alias "#234" (ByVal no As Long, ByVal secs As Long) As Long
Public Declare Function GSVgetSlowRate Lib "MEGSV" Alias "#235" (ByVal no As Long) As Long
Public Declare Function GSVsetSpecialMode Lib "MEGSV" Alias "#236" (ByVal no As Long, ByVal smode As Long) As Long
Public Declare Function GSVgetSpecialMode Lib "MEGSV" Alias "#237" (ByVal no As Long) As Long
Public Declare Function GSVwriteSamplingRate Lib "MEGSV" Alias "#238" (ByVal no As Long, ByVal freq As Double, ByVal factor As Long) As Long
Public Declare Function GSVreadSamplingRate Lib "MEGSV" Alias "#239" (ByVal no As Long, ByRef freq As Double, ByRef factor As Long) As Long
Public Declare Function GSVsetCanSetting Lib "MEGSV" Alias "#240" (ByVal no As Long, ByVal stype As Long, ByVal val As Long) As Long
Public Declare Function GSVgetCanSetting Lib "MEGSV" Alias "#241" (ByVal no As Long, ByVal stype As Long) As Long
Public Declare Function GSVsetAnalogFilter Lib "MEGSV" Alias "#244" (ByVal no As Long, ByVal freq As Double) As Long
Public Declare Function GSVgetAnalogFilter Lib "MEGSV" Alias "#245" (ByVal no As Long) As Double
Public Declare Function GSVisCommandAvailable Lib "MEGSV" Alias "#247" (ByVal no As Long, ByVal cmd1 As Long, ByVal cmd2 As Long) As Long
Public Declare Function GSVsetNoiseCutThreshold Lib "MEGSV" Alias "#248" (ByVal no As Long, ByVal thr As Double) As Long
Public Declare Function GSVgetNoiseCutThreshold Lib "MEGSV" Alias "#249" (ByVal no As Long) As Double
Public Declare Function GSVsetAutoZeroCounter Lib "MEGSV" Alias "#250" (ByVal no As Long, ByVal ctr As Long) As Long
Public Declare Function GSVgetAutoZeroCounter Lib "MEGSV" Alias "#251" (ByVal no As Long) As Long
Public Declare Function GSVsetUserTextChar Lib "MEGSV" Alias "#252" (ByVal no As Long, ByVal addr As Long, ByVal c As Byte) As Long
Public Declare Function GSVgetRanges Lib "MEGSV" Alias "#262" (ByVal no As Long, ByVal channel As Long, ByVal inx As Long, ByRef prange As Double) As Long
Public Declare Function GSVsetRanges Lib "MEGSV" Alias "#263" (ByVal no As Long, ByVal channel As Long, ByVal inx As Long, ByVal range As Double) As Long
Public Declare Function GSVgetTxModeConfig Lib "MEGSV" Alias "#357" (ByVal no As Long) As Long
Public Declare Function GSVsetTxModeTransmit4 Lib "MEGSV" Alias "#358" (ByVal no As Long, ByVal t4 As Long) As Long
Public Declare Function GSVgetTxModeTransmit4 Lib "MEGSV" Alias "#359" (ByVal no As Long) As Long
Public Declare Function GSVsetTxModeRepeat3 Lib "MEGSV" Alias "#360" (ByVal no As Long, ByVal r3 As Long) As Long
Public Declare Function GSVgetTxModeRepeat3 Lib "MEGSV" Alias "#361" (ByVal no As Long) As Long
Public Declare Function GSVsetTxModeTransmit5 Lib "MEGSV" Alias "#362" (ByVal no As Long, ByVal t5 As Long) As Long
Public Declare Function GSVgetTxModeTransmit5 Lib "MEGSV" Alias "#363" (ByVal no As Long) As Long
Public Declare Function GSVsetTxModeReadOnly Lib "MEGSV" Alias "#364" (ByVal no As Long, ByVal ro As Long) As Long
Public Declare Function GSVgetTxModeReadOnly Lib "MEGSV" Alias "#365" (ByVal no As Long) As Long
Public Declare Function GSVsetSpecialModeSlow Lib "MEGSV" Alias "#372" (ByVal no As Long, ByVal slow As Long) As Long
Public Declare Function GSVgetSpecialModeSlow Lib "MEGSV" Alias "#373" (ByVal no As Long) As Long
Public Declare Function GSVsetSpecialModeAverage Lib "MEGSV" Alias "#374" (ByVal no As Long, ByVal avg As Long) As Long
Public Declare Function GSVgetSpecialModeAverage Lib "MEGSV" Alias "#375" (ByVal no As Long) As Long
Public Declare Function GSVsetSpecialModeFilter Lib "MEGSV" Alias "#376" (ByVal no As Long, ByVal flt As Long) As Long
Public Declare Function GSVgetSpecialModeFilter Lib "MEGSV" Alias "#377" (ByVal no As Long) As Long
Public Declare Function GSVsetSpecialModeMax Lib "MEGSV" Alias "#378" (ByVal no As Long, ByVal mx As Long) As Long
Public Declare Function GSVgetSpecialModeMax Lib "MEGSV" Alias "#379" (ByVal no As Long) As Long
Public Declare Function GSVsetSpecialModeFilterAuto Lib "MEGSV" Alias "#380" (ByVal no As Long, ByVal fltauto As Long) As Long
Public Declare Function GSVgetSpecialModeFilterAuto Lib "MEGSV" Alias "#381" (ByVal no As Long) As Long
Public Declare Function GSVsetSpecialModeFilterOrder5 Lib "MEGSV" Alias "#382" (ByVal no As Long, ByVal fltord5 As Long) As Long
Public Declare Function GSVgetSpecialModeFilterOrder5 Lib "MEGSV" Alias "#383" (ByVal no As Long) As Long
Public Declare Function GSVsetSpecialModeSleep Lib "MEGSV" Alias "#384" (ByVal no As Long, ByVal sleep As Long) As Long
Public Declare Function GSVgetSpecialModeSleep Lib "MEGSV" Alias "#385" (ByVal no As Long) As Long
Public Declare Function GSVsetSpecialModeAutoZero Lib "MEGSV" Alias "#400" (ByVal no As Long, ByVal autozero As Long) As Long
Public Declare Function GSVgetSpecialModeAutoZero Lib "MEGSV" Alias "#401" (ByVal no As Long) As Long
Public Declare Function GSVsetSpecialModeNoiseCut Lib "MEGSV" Alias "#402" (ByVal no As Long, ByVal noisecut As Long) As Long
Public Declare Function GSVgetSpecialModeNoiseCut Lib "MEGSV" Alias "#403" (ByVal no As Long) As Long
Public Declare Function GSVreadSamplingFrequency Lib "MEGSV" Alias "#404" (ByVal no As Long) As Double
Public Declare Function GSVreadSamplingFactor Lib "MEGSV" Alias "#405" (ByVal no As Long) As Long
Public Declare Function GSVsetBaudRate Lib "MEGSV" Alias "#406" (ByVal no As Long, ByVal baud As Long) As Long
Public Declare Function GSVgetBaudRate Lib "MEGSV" Alias "#407" (ByVal no As Long) As Long
Public Declare Function GSVsetCanBaudRate Lib "MEGSV" Alias "#408" (ByVal no As Long, ByVal baud As Long) As Long
Public Declare Function GSVgetCanBaudRate Lib "MEGSV" Alias "#409" (ByVal no As Long) As Long
Public Declare Function GSVisSamplingFrequencyProtocolLinear Lib "MEGSV" Alias "#410" (ByVal no As Long) As Long
Public Declare Function GSVisSamplingFactorProtocolLinear Lib "MEGSV" Alias "#411" (ByVal no As Long) As Long
Public Declare Function GSVsetCanID Lib "MEGSV" Alias "#412" (ByVal no As Long, ByVal idtype As Long, ByVal id As Long) As Long
Public Declare Function GSVgetCanID Lib "MEGSV" Alias "#413" (ByVal no As Long, ByVal idtype As Long) As Long
Public Declare Function GSVsetCanBaud Lib "MEGSV" Alias "#414" (ByVal no As Long, ByVal baud As Long) As Long
Public Declare Function GSVgetCanBaud Lib "MEGSV" Alias "#415" (ByVal no As Long) As Long
Public Declare Function GSVisCanAvailable Lib "MEGSV" Alias "#417" (ByVal no As Long) As Long
Public Declare Function GSVsetCanActive Lib "MEGSV" Alias "#418" (ByVal no As Long, ByVal active As Long) As Long
